add configuration to spring-boot-plugin to run the application via maven